[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "fixtures"
description = "Fixtures, reusable state for writing clean tests and more."
readme = "README.rst"
classifiers = [
    "Development Status :: 6 - Mature",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
authors = [{name = "Robert Collins", email = "robertc@robertcollins.net"}]
license = {text = "Apache-2.0 or BSD"}
requires-python = ">=3.10"
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/testing-cabal/fixtures"
"Bug Tracker" = "https://github.com/testing-cabal/fixtures/issues"
"Source Code" = "https://github.com/testing-cabal/fixtures"

[project.optional-dependencies]
"streams" = ["testtools"]
"test" = ["testtools"]
"docs" = ["docutils"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "fixtures/_version.py"

[tool.hatch.build.targets.sdist]
include = [
    "fixtures*",
    "tests*",
    "Apache-2.0",
    "BSD",
    "COPYING",
    "GOALS",
    "HACKING",
    "Makefile",
    "NEWS",
    "tox.ini",
    ]

[tool.hatch.build.targets.wheel]
packages = ["fixtures"]

[tool.mypy]
ignore_missing_imports = true
# Enable strict typing by default for fixtures package
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
