[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "fixtures"
description = "Fixtures, reusable state for writing clean tests and more."
readme = "README.rst"
classifiers = [
    "Development Status :: 6 - Mature",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
authors = [{name = "Robert Collins", email = "robertc@robertcollins.net"}]
license = {text = "Apache-2.0 or BSD"}
requires-python = ">=3.10"
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/testing-cabal/fixtures"
"Bug Tracker" = "https://github.com/testing-cabal/fixtures/issues"
"Source Code" = "https://github.com/testing-cabal/fixtures"

[project.optional-dependencies]
"streams" = ["testtools"]
"test" = ["testtools"]
"docs" = ["docutils"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "fixtures/_version.py"

[tool.hatch.build.targets.sdist]
include = [
    "fixtures*",
    "tests*",
    "Apache-2.0",
    "BSD",
    "COPYING",
    "GOALS",
    "HACKING",
    "Makefile",
    "NEWS",
    "tox.ini",
]

[tool.hatch.build.targets.wheel]
packages = ["fixtures"]

[tool.ruff]
exclude = ["fixtures/_version.py"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["E4", "E5", "E7", "E9", "F", "G", "LOG", "S", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["LOG015", "S"]

[tool.mypy]
# Enable strict typing by default for fixtures package
strict = true
