[metadata]
name = fixtures
summary = Fixtures, reusable state for writing clean tests and more.
description-file =
    README
author = Robert Collins
author-email = robertc@robertcollins.net
home-page = https://launchpad.net/python-fixtures
classifier =
    Development Status :: 6 - Mature
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Quality Assurance
    Topic :: Software Development :: Testing

[files]
packages =
    fixtures

[bdist_wheel]
universal = 1

[extras]
test =
  mock
docs =
  docutils
