[metadata]
name = fixtures
summary = Fixtures, reusable state for writing clean tests and more.
description-file =
    README
author = Robert Collins
author-email = robertc@robertcollins.net
home-page = https://github.com/testing-cabal/fixtures
python-requires = >=3.6
classifier =
    Development Status :: 6 - Mature
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Quality Assurance
    Topic :: Software Development :: Testing

[files]
packages =
    fixtures

[extras]
test =
    mock
docs =
    docutils
