[metadata]
name = fixtures
summary = Fixtures, reusable state for writing clean tests and more.
description_file =
    README.rst
description_content_type = text/x-rst; charset=UTF-8
author = Robert Collins
author_email = robertc@robertcollins.net
url = https://github.com/testing-cabal/fixtures
python_requires = >=3.6
classifiers =
    Development Status :: 6 - Mature
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Quality Assurance
    Topic :: Software Development :: Testing

[files]
packages =
    fixtures

[extras]
test =
    mock
docs =
    docutils
